2020-01-20  Mark Eggleston  <mark.eggleston@codethink.com>

	Backport from mainline
	* gfortran.dg/pr93263_1.f90: Change scan-tree-dump-not to
	scan-tree-dump.

2020-01-20  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	PR middle-end/93246
	* g++.dg/torture/pr93246.C: New testcase.

2020-01-17  Mark Eggleston  <mark.eggleston@codethink.com>

	Backport from mainline
	Mark Eggleston  <mark.eggleston@codethink.com>
	Tobias Burnus  <burnus@gcc.gnu.org>

	* gfortran.dg/pr93263_1.f90: New test.
	* gfortran.dg/pr93263_2.f90: New test.

2020-01-15  Joseph Myers  <joseph@codesourcery.com>

	Backport from mainline:
	2020-01-15  Joseph Myers  <joseph@codesourcery.com>

	PR c/93072
	* gcc.dg/inline-42.c, gcc.dg/inline-43.c: New tests.

2020-01-14  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2020-01-13  Martin Jambor  <mjambor@suse.cz>

	PR ipa/93223
	* g++.dg/ipa/pr93223.C: New test.

2020-01-13  Joseph Myers  <joseph@codesourcery.com>

	Backport from mainline:
	2020-01-13  Joseph Myers  <joseph@codesourcery.com>

	PR c/93241
	* gcc.dg/c11-static-assert-10.c, gcc.dg/c99-const-expr-15.c: New
	tests.

2020-01-13  Joseph Myers  <joseph@codesourcery.com>

	Backport from mainline:
	2019-12-09  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/91226
	* gcc.dg/dfp/bid-non-canonical-d128-1.c,
	gcc.dg/dfp/bid-non-canonical-d128-2.c,
	gcc.dg/dfp/bid-non-canonical-d128-3.c,
	gcc.dg/dfp/bid-non-canonical-d128-4.c,
	gcc.dg/dfp/bid-non-canonical-d32-1.c,
	gcc.dg/dfp/bid-non-canonical-d32-2.c,
	gcc.dg/dfp/bid-non-canonical-d64-1.c,
	gcc.dg/dfp/bid-non-canonical-d64-2.c: New tests.

2020-01-10  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2019-12-17  Martin Jambor  <mjambor@suse.cz>

        PR ipa/92971
        * gcc.dg/ipa/ipcp-agg-12.c: New test.

2020-01-10  Przemyslaw Wirkus  <przemyslaw.wirkus@arm.com>

	Backport from trunk
	PR target/93188
	Backport from trunk
	* gcc.target/arm/multilib.exp: Add new tests for rm-profile only.
